--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -101,6 +101,26 @@ footer {
       margin-left: 15px;
     }
   }
+
+  @media (max-width: 800px) {
+    footer {
+      small {
+        display: block;
+        float: none;
+        margin-bottom: 1em;
+      }
+
+      ul {
+        float: none;
+        padding: 0;
+
+        li {
+          float: none;
+          margin-left: 0;
+        }
+      }
+    }
+  }
 }
 
 /* miscellaneous */
@@ -126,11 +146,13 @@ aside {
       border: 0;
       padding-top: 0;
     }
+
     span {
       display: block;
       margin-bottom: 3px;
       line-height: 1;
     }
+
     h1 {
       font-size: 1.4em;
       text-align: left;
@@ -140,10 +162,12 @@ aside {
     }
   }
 }
+
 .gravatar {
   float: left;
   margin-right: 10px;
 }
+
 .gravatar_edit {
   margin-top: 15px;
 }
@@ -155,18 +179,23 @@ input, textarea, select, .uneditable-input {
   margin-bottom: 15px;
   @include box_sizing;
 }
+
 input {
   height: auto !important;
 }
+
 #error_explanation {
   color: red;
+
   ul {
     color: red;
     margin: 0 0 30px 0;
   }
 }
+
 .field_with_errors {
   @extend .has-error;
+
   .form-control {
     color: $state-danger-text;
   }
